# wgsl-bindgen

example/: Cargo.toml
example/src/: shader_bindings.rs
wgsl_bindgen/: Cargo.toml
wgsl_bindgen/src/: lib.rs
wgsl_bindgen/src/bindgen/: bindgen.rs
wgsl_bindgen/src/generate/: consts.rs  shader_module.rs
wgsl_bindgen/src/generate/bind_group/: mod.rs
